# AsignacionAulica

./: .gitignore  README.md  build.ps1  empaquetar.py  instalador.iss  pyproject.toml  pysidedeploy.spec
.github/workflows/: build-exe.yml  build-windows.yml  flet-build-windows.yml  python-app.yml
asignacion_aulica/: main.py
asignacion_aulica/frontend/: config.py
assets/edificios_default/: Universidad.xlsx
base_de_datos/: README.md  base_de_datos.db  tablas.sql
src/asignacion-aulica/: main.py
src/asignacion_aulica/: __main__.py  assets.py  get_asset_path.py  main.py
src/asignacion_aulica/GUI/: main.py
src/asignacion_aulica/UI/: BarraLateral.qml  Colores.qml  Main.qml  qmldir
src/asignacion_aulica/assets/: __init__.py
src/asignacion_aulica/backend/: análisis_de_asignaciones.py  lógica_de_asignación.py  preferencias.py  restricciones.py
src/asignacion_aulica/base_de_datos/: tablas.sql
src/asignacion_aulica/data/: .~lock.aulas.xlsx#  aulas.xlsx  edificios.xlsx
src/assets/: Edificios_Data_Insert_Example.sql  Edificios_View_Generator.sql  Universidad.db
src/plantillas/: clases.py
src/plantillas_excel/: README.md  clases.py  estilos.py  validadores.py
tests/pytest/: helper_functions.py  test_análisis_de_asignaciones.py  test_asignaciones_manuales.py  test_asignación_manual.py  test_integrales.py  test_obtener_penalización.py  test_preferencia_capacidad.py  test_preferencia_capacidad_excedida.py  test_preferencia_capacidad_sobrante.py  test_preferencia_edificio_preferido.py  test_preferencias.py  test_restricciones.py
(+51 files in other folders)
