[project]
name = "asignacion-aulica"
description = "Software de asignación de aulas para la UNRN Sede Andina"
version = "0.0.1"

authors = [
  {name = "Cristian Gustavo Mogensen"},
  {name = "Juan Manuel Valenzuela"},
  {name = "Teo Pirato Guthmann"},
  {name = "Joaquín Rodríguez"}
]

requires-python = "~= 3.11"
dependencies = [
  "pandas == 2.2.*",
  "ortools == 9.12.*",
  "flet == 0.28.3"
]

[project.optional-dependencies]
tests = [
  "pytest ~= 8.3"
]

[tool.pytest.ini_options]
testpaths = ["tests/pytest"]
minversion = "8.3"

[tool.flet]
company = "UNRN"
org = "ar.edu.unrn"
product = "Asignación Áulica"

[tool.flet.app]
path = "src"

