[project]
name = "asignacion-aulica"
description = "Software de asignación de aulas para la UNRN Sede Andina"
version = "0.0.2"

authors = [
  {name = "Cristian Gustavo Mogensen"},
  {name = "Juan Manuel Valenzuela"},
  {name = "Teo Pirato Guthmann"},
  {name = "Joaquín Rodríguez"}
]

requires-python = "~= 3.11"
dependencies = [
  "pandas == 2.2.*",
  "numpy == 2.2.*",
  "ortools == 9.12.*",
  "openpyxl == 3.1.*",
  "pyside6 == 6.9.*"
]

[project.optional-dependencies]
test = [
  "pytest ~= 8.3"
]

[project.gui-scripts]
asignacion-aulica = "asignacion_aulica:main.main"

[tool.pytest.ini_options]
testpaths = ["tests/pytest"]
minversion = "8.3"
